# Hajime

./: .env  .env.development  .env.example  .gitignore  .gitlab-ci.yml  .pnp.cjs  .prettierrc.js  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  docker-compose.yml  electron-webpack.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.electron-vue/: webpack.renderer.config.js  webpack.web.config.js
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflow/: build.yml
.github/workflows/: build.yml
assets/database/: README.md  hajime_structure.dbml
assets/n8n/: feedbackSystem.json
base/: README  askc_db.sql  model_db_askc.mwb
database/: README.md  init_structure.sql  structure.mwb  structure.mwb.bak  structure.mwb.beforefix
database/mysql/: content.sql  structure.sql
database/sqlite/: askc_db  askc_db.sql
env/: .env.example
scripts/: copy.js
src/: App.vue  index.ejs  index.html  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/apps/: Main.vue
src/assets/css/: index.css
src/assets/scss/: transitions.scss
src/components/: HelloWorld.vue
src/components/layouts/: Software.vue
src/composables/: feedback.ts
src/composables/feedback/: index.ts  types.ts
src/config/: env.ts  i18n.ts  index.ts  router.ts  vee-validate.ts
src/database/: seed.ts  test_basic.js
src/lib/api/: index.ts
src/main/: index.js
src/plugins/: index.ts
src/renderer/: App.vue  index.js  main.js
static/: import-sample-team.csv  import-sample.csv
webpack/: webpack.renderer.additions.js
(+578 files in other folders)
