[package]
name = "app"
version = "0.1.2-prealpha"
description = "Hajime - Weapon Martial Art Software Management"
authors = [ "Kevin UNFRICHT" ]
license = "MIT"
repository = "https://github.com/Maus3rSR/Hajime.git"
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = [ "api-all" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
